Get Images looking really nice and processing fast

--- a/astro/src/pages/blog/2021-website-redesign.mdx
+++ b/astro/src/pages/blog/2021-website-redesign.mdx
@@ -7,8 +7,8 @@ tags:
   - code
 layout: '../../layouts/Post.astro'
 ---
-
 import { Tweet } from '@astro-community/astro-embed-twitter'
+export { components } from '../../components/Post/components.astro'
 
 ![Home page screenshot](/img/website-update/home-page.png)
 
@@ -34,8 +34,6 @@ If we are entering the era of Web3 (which is Soylent in this Tweet, ewww) and it
 techno-optimisim and ownership of the Web 1.0 era, what better way to embody this than with an over-engineered personal
 site? Also, I just really love Greek salad (I live in Astoria after all, you walk outside on Ditmars and they force
 Greek salad on you).
-
-<!-- excerpt -->
 
 > As an aside, I find all of Web3 and blockchain stuff disgusting. I have no money in any of that stuff because I object
 > on environmental issues and that most of it reeks of pump and dump schemes. That said, I am happy for anything that
