--- a/astro/src/pages/blog/adhd.mdx
+++ b/astro/src/pages/blog/adhd.mdx
@@ -8,8 +8,8 @@ tags:
   - mental-health
 layout: '../../layouts/Post.astro'
 ---
-
 import { Tweet } from '@astro-community/astro-embed-twitter'
+export { components } from '../../components/Post/components.astro'
 
 > I talk about suicide and depression in this post.
 
@@ -47,8 +47,6 @@ around 3.0. I get a computer when I'm 15 and it's off to the races. I could sit 
 information. Tech blogs, gaming sites, and the old StumbleUpon extension opened my mind to so many possibilities in the
 world. I end up going to a vocational school to learn how to do video editing / graphic design / web design and fall in
 love with making websites.
-
-<!-- excerpt -->
 
 # 2. Early Adulthood
 
