--- a/astro/src/pages/blog/cooking-cherry-slab-pie-hot-sauce-shrimp-cheesy-polenta.mdx
+++ b/astro/src/pages/blog/cooking-cherry-slab-pie-hot-sauce-shrimp-cheesy-polenta.mdx
@@ -8,6 +8,7 @@ tags:
   - cooking
 layout: '../../layouts/Post.astro'
 ---
+export { components } from '../../components/Post/components.astro'
 
 Last week was weird for me. The weekend before last, we booked social engagements every day of the weekend. While it was
 nice that I went to the beach and saw friends, we didn't do our weekly grocery shopping. As a result, we ordered takeout
@@ -21,8 +22,6 @@ winning the game on a walk off sacrifice fly. We even got a free shirt! Absolute
 The highlight of my weekend wasn't the game, though. At some point last week, a recipe for a cherry pie came across my
 Twitter feed that **I had to make**. I cleared my schedule on Sunday and vowed to spend the day cooking. The results
 speak for themselves, so let's dive in.
-
-<!-- excerpt -->
 
 # [Cherry Slab Pie][cherry-slab-pie]
 
