--- a/astro/src/pages/blog/cooking-veggie-burgers-and-more.mdx
+++ b/astro/src/pages/blog/cooking-veggie-burgers-and-more.mdx
@@ -8,6 +8,7 @@ tags:
   - cooking
 layout: '../../layouts/Post.astro'
 ---
+export { components } from '../../components/Post/components.astro'
 
 This weekend was one of contrasts. On Friday, we went to a birthday party for my partner's yoga teacher / friend. Upon
 showing up, we were told to put on cat ears. I declined (I already have a cat tattoo) but still had a very fun time.
@@ -26,8 +27,6 @@ good at this game!).
 
 But on Sunday, I needed to kick some ass cooking to feel whole. I cannot be lazy all weekend and feel good about myself.
 So I quickly tossed together a menu and got cooking.
-
-<!-- excerpt -->
 
 # Veggie Burgers with Bacon Jam
 
