--- a/astro/src/pages/blog/feelings-api.mdx
+++ b/astro/src/pages/blog/feelings-api.mdx
@@ -8,6 +8,7 @@ tags:
   - code
 layout: '../../layouts/Post.astro'
 ---
+export { components } from '../../components/Post/components.astro'
 
 I have been in therapy since I was 18 years old. At this point, I feel no shame about it and I know that it makes me
 a stronger, healthier adult than I would be otherwise. I think everyone could benefit from some therapy, even if your
@@ -16,8 +17,6 @@ life is going okay at the moment.
 A few months ago, my therapist challenged me to begin journaling my daily life in order to get more in touch with my
 feelings and to draw connections of my behaviors and mental health. Rather than use a paper journal, they recommended an
 app called [Daylio](https://daylio.webflow.io). I installed the app and went about living my life.
-
-<!-- excerpt -->
 
 ## Daylio
 
