--- a/astro/src/pages/blog/funny-money.mdx
+++ b/astro/src/pages/blog/funny-money.mdx
@@ -8,8 +8,8 @@ tags:
   - code
 layout: '../../layouts/Post.astro'
 ---
-
 import { Tweet } from '@astro-community/astro-embed-twitter'
+export { components } from '../../components/Post/components.astro'
 
 This is a post about cryptocurrency, but first, let me tell you a tale.
 
@@ -41,8 +41,6 @@ The day to day was always drama filled and exciting. You drive to Sandusky to re
 Heights to setup a new cafe. You learn to make patch cables, you learn more about networking and scripting. You get in
 arguments about how much gas money you should be reimbursed for driving to all those sites. Lots of 16 hour days cause
 it has to get done _now now now_. Typical 2 bit IT shit.
-
-<!-- excerpt -->
 
 What's a little different from a typical IT job is... the customers paying your bills are unsavory. And _their_
 customers are all poor people trying to turn a dollar into $10 knowing full well that the deck is stacked against them.
