--- a/astro/src/pages/blog/hackathons-all-the-time.mdx
+++ b/astro/src/pages/blog/hackathons-all-the-time.mdx
@@ -9,6 +9,7 @@ tags:
   - code
 layout: '../../layouts/Post.astro'
 ---
+export { components } from '../../components/Post/components.astro'
 
 Over the past two years, I've been to quite a few hackathons
 ([MHacks](http://www.mhacks.org/), [Penn Apps](http://2014s.pennapps.com/),
@@ -46,8 +47,6 @@ Even though the Nerf Gun Turret is a hardware hack, I think the concept extends
 to all hacks. Sit down with your teammates, plan out what you want to make, look
 for libraries that will make development easier, divide tasks to members and go
 with that. The hackathon is a puzzle: Show up with all the pieces.
-
-<!-- excerpt -->
 
 ## Do What You Love
 
