--- a/astro/src/pages/blog/icymi-beauty-and-the-beat.mdx
+++ b/astro/src/pages/blog/icymi-beauty-and-the-beat.mdx
@@ -8,6 +8,7 @@ tags:
   - icymi
 layout: '../../layouts/Post.astro'
 ---
+export { components } from '../../components/Post/components.astro'
 
 This week, I want to turn you on to a fun record. A record that will let you
 leave your worries at door and enjoy yourself because it is about nothing and
@@ -22,8 +23,6 @@ The album is [Edan's _Beauty & The Beat_](https://open.spotify.com/album/0E5nyAi
 underground hip hop that sounds like it's backed by a late 60s guitar heavy rock
 band that's been tripping for 3 years straight. I'm a huge fan of both of those
 genres, so this is like a special treat for me.
-
-<!-- excerpt -->
 
 > Since breast-feeding, my flesh-eating flows had the best leading rappers' chests beating, fast
 >
