--- a/astro/src/pages/blog/icymi-glocca-morra-just-married.mdx
+++ b/astro/src/pages/blog/icymi-glocca-morra-just-married.mdx
@@ -8,8 +8,8 @@ tags:
   - icymi
 layout: '../../layouts/Post.astro'
 ---
-
 import { YouTube } from '@astro-community/astro-embed-youtube'
+export { components } from '../../components/Post/components.astro'
 
 <StreamingAlbum
   name="Just Married"
@@ -38,8 +38,6 @@ general chaos.
 Let's start with a practical example: **Glocca Morra's _Just Married_** from 2012. You got jangly guitars doing math
 rock riffs. You got a lead singer screaming about the first year of marriage and being a fuck up. And you have a drummer
 just doing his thing. These are all things that I love.
-
-<!-- excerpt -->
 
 > Here's your anniversary <br />
 > Ten years down the drain
