--- a/astro/src/pages/blog/icymi-live-in-concert-ep.mdx
+++ b/astro/src/pages/blog/icymi-live-in-concert-ep.mdx
@@ -8,6 +8,7 @@ tags:
   - icymi
 layout: '../../layouts/Post.astro'
 ---
+export { components } from '../../components/Post/components.astro'
 
 ![Wiz Khalifa & Curren$y - Live In Concert EP](/img/icymi/live-in-concert.jpg)
 
