--- a/astro/src/pages/blog/icymi-moodymann.mdx
+++ b/astro/src/pages/blog/icymi-moodymann.mdx
@@ -8,6 +8,7 @@ tags:
   - icymi
 layout: '../../layouts/Post.astro'
 ---
+export { components } from '../../components/Post/components.astro'
 
 ![Moodymann - Moodymann](/img/icymi/moodymann.jpg)
 
@@ -16,8 +17,6 @@ creating low key Detroit house music, James Dixon finally starts using his voice
 other of his albums) to show us his vision of his city. Detroit house music sounds like French House meets Motown. This
 album feels like a woozy tour of the D, where most of the songs are about blowing weed, sipping Remy, and getting with
 women.
-
-<!-- excerpt -->
 
 What really makes this album special is Dixion's voice: All the songs are sung in almost a whisper, but with the music
 around it, it makes complete sense. The album ends with his 11 minute remix of Funkadelic's _Cosmic Slop_. More
