--- a/astro/src/pages/blog/icymi-the-monitor.mdx
+++ b/astro/src/pages/blog/icymi-the-monitor.mdx
@@ -8,6 +8,7 @@ tags:
   - icymi
 layout: '../../layouts/Post.astro'
 ---
+export { components } from '../../components/Post/components.astro'
 
 ![The Monitor](/img/icymi/the-monitor.jpg)
 
@@ -35,8 +36,6 @@ to the lead singer (Patrick Stickles) singing about moving from Jersey to
 Massachusetts after a bad break up. Throughout the album, there are more Civil
 War quotes that fit perfectly with the album. Using the backdrop of the war,
 topics like relationships, addiction, and just general anxiety are explored.
-
-<!-- excerpt -->
 
 > There will be parties, there will be fun
 >
