--- a/astro/src/pages/blog/job-search-2k22.mdx
+++ b/astro/src/pages/blog/job-search-2k22.mdx
@@ -8,6 +8,7 @@ tags:
   - code
 layout: '../../layouts/Post.astro'
 ---
+export { components } from '../../components/Post/components.astro'
 
 At the end of 2021, [I left my job at Talent Inc.](/blog/what-i-learned-working-at-my-first-startup) and conducted an extremely thorough job search.
 I really prefer to job search without a day job so that I can give it my full focus. Today, I am happy to announce that
@@ -32,8 +33,6 @@ Let's take a quick at conversion rates compared to 2017:
 The numbers don't tell the full story here either! The later stage numbers here are weighed down by the fact that I was
 able to drop out of processes later on if I wasn't getting good vibes from the company. That freedom alone allowed me to
 have a little more swagger in walking into interviews.
-
-<!-- excerpt -->
 
 # "Technology Enabled Job Search"
 
