--- a/astro/src/pages/blog/what-i-learned-working-at-my-first-startup.mdx
+++ b/astro/src/pages/blog/what-i-learned-working-at-my-first-startup.mdx
@@ -8,6 +8,7 @@ tags:
   - code
 layout: '../../layouts/Post.astro'
 ---
+export { components } from '../../components/Post/components.astro'
 
 Today is my last day working at [Talent Inc](https://talentinc.com/). I've been there four years, which is the longest
 I have ever held a job and it's the first product startup I've ever worked at. I feel extremely lucky for this
@@ -29,8 +30,6 @@ a fix is delayed to get the job done. This made my life so much easier and less 
 How can I reward this team effort? I was lucky during my tenure at Talent Inc many opportunities to build systems from
 the ground up to empower these users. I feel that we delivered on those opportunities and the fact that we exited kind
 of validates that belief.
-
-<!-- excerpt -->
 
 Here are some cool tech patterns I learned around this:
 
@@ -127,8 +126,7 @@ so hard I burnout once a year". I should probably work on that… I'm going to t
 habits and doing a thorough job search next year.
 
 <figure>
-  ![Me & a coworker in a marketing photo looking at an empty
-  notebook](/img/what-i-learned-working-at-talentinc/reading-on-couch.jpeg)
+  ![Me & a coworker in a marketing photo looking at an empty notebook](/img/what-i-learned-working-at-talentinc/reading-on-couch.jpeg)
   <figcaption>
     You never know when you're going to show up on the marketing website…
   </figcaption>
