--- a/astro/src/pages/blog/cooking-strawberry-pretzel-pie-spiked-cucumber-soup.mdx
+++ b/astro/src/pages/blog/cooking-strawberry-pretzel-pie-spiked-cucumber-soup.mdx
@@ -8,6 +8,7 @@ tags:
   - cooking
 layout: '../../layouts/Post.astro'
 ---
+export { components } from '../../components/Post/components.astro'
 
 If there is one thing that I appreciate from 2020 is that I've gotten really good at cooking. By not commuting to work,
 I have the energy and time to make meals each night. My partner and I split cooking and I think I'm a better cook than
@@ -24,8 +25,6 @@ Then I combined the pretzel with some half melted butter and sugar and lay it ou
 use a stand mixer, but all I have are my 🙌 so they had to do. Bake it and let it cool in the fridge for a bit.
 
 ![Making the crust in 3 steps](/img/cooking-strawberry-pie-cucumber-soup/making-the-crust.jpg)
-
-<!-- excerpt -->
 
 It's time to make [cream](https://www.youtube.com/watch?v=PBwAxmrE194)! The recipe calls for a cup of confectioners
 sugar, but I used all that up making the crust, so I used granulated. This ended up working fine because it dissolves.
