--- a/astro/src/pages/blog/icymi-quarantine.mdx
+++ b/astro/src/pages/blog/icymi-quarantine.mdx
@@ -8,6 +8,7 @@ tags:
   - icymi
 layout: '../../layouts/Post.astro'
 ---
+export { components } from '../../components/Post/components.astro'
 
 I'm gonna veer off my normal course of grooveable music into something a little
 more personal. This week, I'm gonna suggest that people check out my favorite
@@ -27,8 +28,6 @@ This album is about a break up. They type of break up where you kinda of know
 that it's not working but you don't want to be alone. On Years, you have the
 break up talk where Laurel plays both the parties in the relationship. The
 vocals are ugly and can be a little uncomfortable to listen to.
-
-<!-- excerpt -->
 
 But holy shit is it worth it because you get the album's highlight next, which
 is _Thaw_. The beat is super simple with a lot of static around it for about two
