Eject react-use to fix the build

--- a/astro/src/pages/talks/dots.mdx
+++ b/astro/src/pages/talks/dots.mdx
@@ -6,6 +6,7 @@ slug: dots
 location: NYC Vim
 layout: '../../layouts/Post.astro'
 ---
+export { components } from '../../components/Post/components.astro'
 
 <ResponsiveIFrame
   src="https://docs.google.com/presentation/d/e/2PACX-1vQZg4uXLyw5SMuTbyZJ--fksNQTq4Ih34aWwcdLq9bAe1BeKLpcP-d05UwAAtVJieh5WjkD0iJln4is/embed?start=false&loop=false&delayms=3000"
