--- a/astro/src/pages/talks/redux-hooks.mdx
+++ b/astro/src/pages/talks/redux-hooks.mdx
@@ -6,6 +6,7 @@ slug: redux-hooks
 location: QueensJS
 layout: '../../layouts/Post.astro'
 ---
+export { components } from '../../components/Post/components.astro'
 
 <ResponsiveIFrame
 	src="https://docs.google.com/presentation/d/e/2PACX-1vRtaPvro6rZuE6fu8csqAZ5HQIiUW9Hd-LxuSMOfCt1nOTZzp88GxYRakwHRaqv-rvvwk34lSSkAPqX/embed?start=false&loop=false&delayms=3000"
