--- a/astro/src/pages/talks/redux-hooks.mdx
+++ b/astro/src/pages/talks/redux-hooks.mdx
@@ -10,10 +10,9 @@ export { components } from '../../components/Post/components.astro'
 
 <ResponsiveIFrame
 	src="https://docs.google.com/presentation/d/e/2PACX-1vRtaPvro6rZuE6fu8csqAZ5HQIiUW9Hd-LxuSMOfCt1nOTZzp88GxYRakwHRaqv-rvvwk34lSSkAPqX/embed?start=false&loop=false&delayms=3000"
-	frameBorder="0"
 	width="960"
 	height="569"
-	allowFullScreen={true}
+	className="mb-4"
 />
 
 # Notes / Research / Outline
