--- a/astro/src/pages/blog/job-search-2k22.mdx
+++ b/astro/src/pages/blog/job-search-2k22.mdx
@@ -8,7 +8,7 @@ tags:
   - code
 layout: '../../layouts/Post.astro'
 ---
-import JobSearchSankeyChart from '../../components/JobSearchSankeyChart/index.tsx'
+{/* import JobSearchSankeyChart from '../../components/JobSearchSankeyChart/index.tsx' */}
 export { components } from '../../components/Post/components.astro'
 
 At the end of 2021, [I left my job at Talent Inc.](/blog/what-i-learned-working-at-my-first-startup) and conducted an extremely thorough job search.
@@ -18,7 +18,7 @@ talk about how I conducted my job search as it's been something I've been planni
 
 # [Numbers On The Board](https://www.youtube.com/watch?v=DawrlSwHUiM)
 
-<JobSearchSankeyChart client:only year={2022} />
+{/* <JobSearchSankeyChart client:only year={2022} /> */}
 
 This job market is wild! I can't tell if companies are hiring harder this cycle or if the fact that my last role was
 "senior software engineer" at a startup or what. This cycle could not have gone any more different than my last job
