--- a/astro/src/pages/blog/neovim-lua.mdx
+++ b/astro/src/pages/blog/neovim-lua.mdx
@@ -87,7 +87,6 @@ Here's a video of it all at work. Notice all the code completion and the auto fo
 <DemoVideo
   src="/img/neovim-lua/lsp-completion.webm"
   alt="Video showing off the code compeltion plugins I setup"
-  className="pb-4"
 />
 
 ## ctrlp ➡️ [telescope](https://github.com/nvim-telescope/telescope.nvim)
@@ -117,6 +116,7 @@ want no numbering at all. I had a very nasty Vimscript function that could do th
 Lua!
 
 <GithubFile
+  expanded
   url="https://github.com/eligundry/dots/blob/eeed2f2fcbf3c1aa02b6981e2abea746b1c50cd6/config/nvim/init.lua#L647-L684"
 />
 
@@ -131,6 +131,7 @@ Another example is how I was able to finally make sense of my love of [Vim's `au
 with how plugins work with it. I will let the following code block explain what I mean.
 
 <GithubFile
+  expanded
   url="https://github.com/eligundry/dots/blob/eeed2f2fcbf3c1aa02b6981e2abea746b1c50cd6/config/nvim/init.lua#L802-L850"
 />
 
