Fix a bunch of spacing and mobile issues

--- a/astro/src/content/blog/funny-money.mdx
+++ b/astro/src/content/blog/funny-money.mdx
@@ -59,14 +59,10 @@ ask why?
 >
 > Him: Yes, but that isn't a good first pass at collecting. Gotta work up to that.
 
-<iframe
-  src="https://giphy.com/embed/xfQk67w5fRRx6"
-  width="480"
-  height="360"
-  frameBorder="0"
-  className="giphy-embed"
-  allowFullScreen
-></iframe>
+<DemoVideo
+  alt="Shocked face"
+  src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjNiYzZlNTAxMGNlZTljZWM3NGI5OGE3Zjk4NDUxOWQ5YmMxYmE5OCZjdD1n/xfQk67w5fRRx6/giphy.mp4"
+/>
 
 As I went to leave, he hits me with $100 and a wink. You know now that this is now dead ass serious, but like all things
 when I was young, I didn't learn. **But hey, that's $100 I didn't have before, again, no issues here.**
