--- a/astro/src/content/blog/what-i-learned-working-at-my-first-startup.mdx
+++ b/astro/src/content/blog/what-i-learned-working-at-my-first-startup.mdx
@@ -47,14 +47,10 @@ Here are some cool tech patterns I learned around this:
 It goes without saying, but I will say it because it's important: **I am going to miss working with these people so
 much. I will never forget your kindness and understanding.**
 
-<iframe
-  src="https://giphy.com/embed/ALQnCUBuggPxS"
-  width="480"
-  height="270"
-  frameBorder="0"
-  className="giphy-embed center"
-  allowFullScreen
-></iframe>
+<DemoVideo
+  alt="Kevin Durant saying 'You da real MVP'"
+  src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExMjYwYWM3ZGE5MDUwYTNhYmZmZDU0MGQ0ZGYyMTM3OWRkZmU3NmZhOCZjdD1n/ALQnCUBuggPxS/giphy.mp4"
+/>
 
 ## So Many Data Pipelines
 
