Too many fun things to list!

--- a/astro/src/content/blog/cooking-veggie-burgers-and-more.mdx
+++ b/astro/src/content/blog/cooking-veggie-burgers-and-more.mdx
@@ -4,6 +4,7 @@ description: I'm not even a vegetarian but I love making these veggie burgers
 date: 2021-07-19T04:00
 slug: cooking-veggie-burgers-and-more
 cover: /img/cooking-veggie-burgers-and-more/finished-burgers.jpeg
+favoriteIndex: 3
 tags:
   - cooking
 ---
