--- a/astro/src/content/talks/redux-hooks.mdx
+++ b/astro/src/content/talks/redux-hooks.mdx
@@ -11,7 +11,7 @@ export { components } from '../../components/Post/components.astro'
 	src="https://docs.google.com/presentation/d/e/2PACX-1vRtaPvro6rZuE6fu8csqAZ5HQIiUW9Hd-LxuSMOfCt1nOTZzp88GxYRakwHRaqv-rvvwk34lSSkAPqX/embed?start=false&loop=false&delayms=3000"
 	width="960"
 	height="569"
-	className="mb-4"
+	className="my-8"
 />
 
 # Notes / Research / Outline
