--- a/astro/src/content/blog/funny-money.mdx
+++ b/astro/src/content/blog/funny-money.mdx
@@ -4,6 +4,7 @@ description: By all means, make that money in crypto, but not all money is right
 slug: funny-money
 date: 2022-01-15T05:00
 cover: https://c.tenor.com/dXZsDQCgO4sAAAAC/the-wire-d-angelo-barksdale.gif
+favoriteIndex: 1
 tags:
   - code
 ---
