--- a/astro/src/content/talks/dots.mdx
+++ b/astro/src/content/talks/dots.mdx
@@ -10,4 +10,5 @@ export { components } from '../../components/Post/components.astro'
   src="https://docs.google.com/presentation/d/e/2PACX-1vQZg4uXLyw5SMuTbyZJ--fksNQTq4Ih34aWwcdLq9bAe1BeKLpcP-d05UwAAtVJieh5WjkD0iJln4is/embed?start=false&loop=false&delayms=3000"
   width="960"
   height="569"
+  className="my-4"
 />
