Update linting (but don't get it passing)

--- a/astro/src/content/blog/2021-website-redesign.mdx
+++ b/astro/src/content/blog/2021-website-redesign.mdx
@@ -18,10 +18,10 @@ I saw this Tweet the other day and it seemed fitting to how I think about person
 <Tweet id="1456360721084674098">
   <blockquote>
     <p lang="en" dir="ltr">
-      trying this analogy thing{' '}
+      trying this analogy thing
       <a href="https://t.co/Q9889HOF3B">pic.twitter.com/Q9889HOF3B</a>
     </p>
-    &mdash; Jane Manchun Wong (@wongmjane){' '}
+    &mdash; Jane Manchun Wong (@wongmjane)
     <a href="https://twitter.com/wongmjane/status/1456360721084674098?ref_src=twsrc%5Etfw">
       November 4, 2021
     </a>
@@ -253,11 +253,11 @@ really show off my personality. It took me a few weeks and some endless scrollin
       </a> &#39;s generative grids pen 💛
       <br />
       <br />
-      CodePen (Desktop only + Chrome / Edge){' '}
-      <a href="https://t.co/WvYqXy3Yoq">https://t.co/WvYqXy3Yoq</a>{' '}
+      CodePen (Desktop only + Chrome / Edge)
+      <a href="https://t.co/WvYqXy3Yoq">https://t.co/WvYqXy3Yoq</a>
       <a href="https://t.co/6kJCifGdbB">pic.twitter.com/6kJCifGdbB</a>
     </p>
-    &mdash; George Francis (@georgedoescode){' '}
+    &mdash; George Francis (@georgedoescode)
     <a href="https://twitter.com/georgedoescode/status/1455150458352381963?ref_src=twsrc%5Etfw">
       November 1, 2021
     </a>
