--- a/astro/src/content/blog/adhd.mdx
+++ b/astro/src/content/blog/adhd.mdx
@@ -66,10 +66,9 @@ both. And this cycle repeats itself for 5 years! I was constantly employed that 
 money to survive, and flunking classes.
 
 <figure className="center">
-  ![Eli in 2011 with Aaron Draplin and some of my fellow
-  interns](/img/adhd/2011-06-10-21.22.12.jpg)
+  ![Eli in 2011 with Aaron Draplin and some of my fellow interns](/img/adhd/2011-06-10-21.22.12.jpg)
   <figcaption>
-    Me in 2011 at one of my internships. I got to meet{' '}
+    Me in 2011 at one of my internships. I got to meet
     <a href="https://twitter.com/Draplin">Aaron Draplin</a> and work with some
     very nice and cool people in Cleveland.
   </figcaption>
