Smol title tweak

--- a/astro/src/content/talks/remix-ab-testing.mdx
+++ b/astro/src/content/talks/remix-ab-testing.mdx
@@ -1,5 +1,5 @@
 ---
-title: Remixing A/B Testing
+title: Remixing A/B Tests
 date: 2023-04-12T04:00
 description: I love Remix, A/B testing & GrowthBook!
 location: Remix NYC
