--- a/astro/src/content/sections/do-you-code.mdx
+++ b/astro/src/content/sections/do-you-code.mdx
@@ -1,4 +1,5 @@
 import GithubCalendar from '../../components/GithubCalendar.astro'
+import { FaGithub } from 'react-icons/fa'
 
 <h2 class="mb-4">Do You Code?</h2>
 
@@ -7,7 +8,7 @@ My life is all about making web applications. I am _the_ generalist you have in 
 Let me at it. Need a thoughtfully designed API? I can do that in my sleep. CSS needs some tweaking? As long as I don't
 need to design it, I'll make it look great.
 
-I have a bunch of examples of my work on [my GitHub](https://github.com/eligundry).
+<FaGithub class="inline align-middle mt-[-3px] mr-[2px]" /> [Review my code on GitHub!](https://github.com/eligundry) <FaGithub class="inline align-middle mt-[-3px] ml-[2px]" />
 
 GitHub contribution calendars are not a good indicator of whether or not someone is a good developer, but they are very
 pretty.
