Make Github section a lot nicer

--- a/astro/src/content/blog/icymi-glocca-morra-just-married.mdx
+++ b/astro/src/content/blog/icymi-glocca-morra-just-married.mdx
@@ -15,7 +15,7 @@ export { components } from '../../components/Post/components.astro'
   artist="Glocca Morra"
   bandcampID="3914936245"
   url="https://gloccamorradied.bandcamp.com/album/just-married-2"
-  className="float-right"
+  className="float-right ml-4"
 />
 
 Y'all, I love emo music. As you can tell, I have a [range of emotions](/feelings) and I have "sad boi" tendencies for
