--- a/astro/src/content/sections/do-you-code.mdx
+++ b/astro/src/content/sections/do-you-code.mdx
@@ -8,9 +8,15 @@ My life is all about making web applications. I am _the_ generalist you have in 
 Let me at it. Need a thoughtfully designed API? I can do that in my sleep. CSS needs some tweaking? As long as I don't
 need to design it, I'll make it look great.
 
-<FaGithub class="inline align-middle mt-[-3px] mr-[2px]" /> [Review my code on GitHub!](https://github.com/eligundry) <FaGithub class="inline align-middle mt-[-3px] ml-[2px]" />
+<a href="https://github.com/eligundry" class:list={['btn', 'btn-primary', 'btn-md', 'not-prose']}>
+  <FaGithub class="inline mr-2 h-6 w-6" />
+  Review my code on GitHub!
+</a>
 
-GitHub contribution calendars are not a good indicator of whether or not someone is a good developer, but they are very
-pretty.
-
-<GithubCalendar className="my-0" />
+<figure class="mt-3">
+  <GithubCalendar className="my-0" />
+  <figcaption class="[&>*]:m-0 mt-0">
+    GitHub contribution calendars are not a good indicator of whether or not someone is a good developer, but they are very
+    pretty.
+  </figcaption>
+</figure>
