Update resume with more Chord info
Thank god for ChatGPT

--- a/astro/src/content/resumeExperiences/croscon.mdx
+++ b/astro/src/content/resumeExperiences/croscon.mdx
@@ -2,7 +2,7 @@
 type: work
 organization: Croscon
 position: Software Engineer
-website: https://croscon.com
+website: https://www.linkedin.com/company/croscon/
 location:
   city: New York
   region: NY
@@ -13,7 +13,7 @@ endDate: 2017-10-26T05:00
 export { experienceComponents as components } from '../../components/Resume/mdxComponents.tsx'
 
 * Instilled a culture of <a href="https://en.wikipedia.org/wiki/Software_testing">software testing</a>
-  into a company that previously had none, reducing the amount of time
+  into a consulting company that previously had none, reducing the amount of time
   spent testing regressions manually across the company.
 * Developed large portions of <a href="http://www.webershandwick.com/">Weber Shandwick's</a>
   MobileCommand, a public relations crisis management web application, and <a href="https://www.gemsafe.com">GemSafe</a>, an
