--- a/astro/src/content/resumeExperiences/pc-surgeons.mdx
+++ b/astro/src/content/resumeExperiences/pc-surgeons.mdx
@@ -9,6 +9,7 @@ location:
   country: US
 startDate: 2013-10-01T05:00
 endDate: 2014-12-01T05:00
+printHide: true
 ---
 export { experienceComponents as components } from '../../components/Resume/mdxComponents.tsx'
 
