--- a/astro/src/content/sections/do-you-code.mdx
+++ b/astro/src/content/sections/do-you-code.mdx
@@ -1,3 +1,6 @@
+---
+page: home
+---
 import GithubCalendar from '../../components/GithubCalendar.astro'
 import { FaGithub } from 'react-icons/fa'
 
