--- a/astro/src/content/sections/resume-activities.mdx
+++ b/astro/src/content/sections/resume-activities.mdx
@@ -1,4 +1,5 @@
 ---
+page: resume
 ---
 export { skillsComponents as components } from '../../components/Resume/mdxComponents.tsx'
 
@@ -7,9 +8,7 @@ export { skillsComponents as components } from '../../components/Resume/mdxCompo
   albums from Spotify.
 * Volunteered with [Code Nation](https://codenation.org/) to teach
   web development to 10th graders during the 2022 school year.
-* Presented [technical talks](/talks) at
-  [The New York City Vim Meetup](/talks/dots),
-  [QueensJS](/talks/redux-hooks),
+* Presented [technical talks](/talks) at [The New York City Vim Meetup](/talks/dots), [QueensJS](/talks/redux-hooks),
   and [Remix NYC](/talks/remix-ab-testing).
 * Former member of [HacKSU](http://hacksu.cs.kent.edu/), Kent State's hacker community and
   [competed in numerous hackathons](https://devpost.com/eligundry) including:
