--- a/astro/src/content/resumeExperiences/chord.mdx
+++ b/astro/src/content/resumeExperiences/chord.mdx
@@ -1,6 +1,6 @@
 ---
 type: work
-organization: Chord
+organization: Chord Commerce
 position: Staff Software Engineer
 website: https://chord.co
 location:
@@ -11,5 +11,7 @@ startDate: 2022-02-07T05:00
 ---
 export { experienceComponents as components } from '../../components/Resume/mdxComponents.tsx'
 
-* Lead technical documentation efforts on a developer experience team.
-* Supported agency partners in implementing our ecommerce platform.
+* Contributed to the development of a [React SDK](https://docs.chord.co/chord-ui/module-react-autonomy) and provided technical support to customers and agency partners, enabling them to integrate our platform seamlessly and achieve their goals efficiently.
+* Led technical documentation efforts in improving REST API documentation, generating automated documentation for the SDK using [Typedoc](https://typedoc.org/), and development of other platform documentation.
+* Launched the 2nd most profitable customer using a data-only integration of our platform.
+* Maintained and improved [Next.js](https://nextjs.org/) and [Gatsby](https://www.gatsbyjs.com/) starter projects, ensuring a smooth onboarding experience for developers. This involved updating dependencies, implementing new features, and resolving community-reported issues.
