--- a/astro/src/content/resumeExperiences/talent-inc.mdx
+++ b/astro/src/content/resumeExperiences/talent-inc.mdx
@@ -25,5 +25,5 @@ export { experienceComponents as components } from '../../components/Resume/mdxC
 * Tech lead for a dynamic payment & order offering system for contractors
   which decreased our average cost to fulfill an order by $10 & increased
   our average payout to contractors by $7.
-* Implemented SSO with <a href="https://oauth.net/2/">OAuth</a>
+* Implemented <abbr title="Single Sign On">SSO</abbr> with <a href="https://oauth.net/2/">OAuth</a>
   across all applications company wide using <a href="https://www.okta.com/">Okta</a> & <a href="https://auth0.com/">Auth0</a>.
