Added preoccuption skills section

--- a/astro/src/content/sections/resume-activities.mdx
+++ b/astro/src/content/sections/resume-activities.mdx
@@ -8,9 +8,11 @@ export { skillsComponents as components } from '../../components/Resume/mdxCompo
   albums from Spotify.
 * Volunteered with [Code Nation](https://codenation.org/) to teach
   web development to 10th graders during the 2022 school year.
-* Presented [technical talks](/talks) at [The New York City Vim Meetup](/talks/dots), [QueensJS](/talks/redux-hooks),
-  and [Remix NYC](/talks/remix-ab-testing).
-* Former member of [HacKSU](http://hacksu.cs.kent.edu/), Kent State's hacker community and
+* Presented [technical talks](/talks) at
+  [Remix NYC](/talks/remix-ab-testing),
+  [QueensJS](/talks/redux-hooks),
+  and [The New York City Vim Meetup](/talks/dots).
+* Alumni of [HacKSU](http://hacksu.cs.kent.edu/), Kent State's hacker community and
   [competed in numerous hackathons](https://devpost.com/eligundry) including:
   <ul class="columns-2 text-sm print:text-xs">
     <li>[KHE](https://khe.io/) 2013 (2nd place), 2014, 2015</li>
