--- a/astro/src/content/sections/resume-skills.mdx
+++ b/astro/src/content/sections/resume-skills.mdx
@@ -42,3 +42,9 @@ export { skillsComponents as components } from '../../components/Resume/mdxCompo
   [MySQL](https://www.mysql.com/),
   [SaltStack](https://www.saltstack.com/),
   and [SQLAlchemy](https://www.sqlalchemy.org/).
+* Currently preoccupied with
+  [ChatGPT](https://openai.com/blog/chatgpt),
+  [React Server Components](https://nextjs.org/docs/getting-started/react-essentials),
+  [product management](https://en.wikipedia.org/wiki/Product_management),
+  and <a href="https://www.a11yproject.com/"><abbr title="Accessiblity">a11y</abbr></a>.
+
